# track-player

./: .gitignore  CMakeLists.txt  README.md
Source/: PlayPauseButton.cpp  PlayPauseButton.h  PlaylistComponents.cpp  PlaylistComponents.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  SimpleAudioPlayerTheme.cpp  SimpleAudioPlayerTheme.h  TrackPlayerTheme.cpp  TrackPlayerTheme.h
scripts/: create-github-release.sh  install.sh
